...
        value={password}
        onChangeText={setPassword}
        onBlur={_onInputBlur}
        inputRef={passwordRef as any}
        tvParallaxProperties={undefined}
        onTextInput={() => {}}
        testID="password-input"
      />
      <PasswordInput
        style={textInputStyle}
        label="Confirm Password"
        value={passwordConfirm}
        onChangeText={setPasswordConfirm}
        onBlur={_onInputBlur}
        tvParallaxProperties={undefined}
        onTextInput={() => {}}
        testID="confirm-password-input"
      />
      <Text style={styles.helperText}>
        You will need to store this password somewhere safe - the LCW does not
        store personal information, collect data, or track usage.
      </Text>
      {errorText ? (
...
