...
  async function startShareRequest(params: ShareRequestParams) {
    const issuerName =
      registries.didEntry(params.client_id)?.name || 'Unknown Issuer'

    const confirmedShare = await displayGlobalModal({
      title: 'Share Credentials?',
      confirmText: 'Continue',
      body: (
        <Text style={mixins.modalBodyText}>
          <Text style={[mixins.modalBodyText, mixins.boldText]}>
            {issuerName}
          </Text>{' '}
          is requesting you share credentials. If you trust this requester,
...
        body: <LoadingIndicatorDots />
      })

      await performShareRequest(params, rawCredentialRecords, rawProfileRecord)
      await displayGlobalModal({
        title: 'Share Successful',
        confirmText: 'Done',
        body: (
          <Text style={mixins.modalBodyText}>
            You have successfully shared{' '}
            {fmtCredentialCount(rawCredentialRecords.length)} with{' '}
            <Text style={[mixins.modalBodyText, mixins.boldText]}>
              {issuerName}
...
