...
    return (
      <AccessibleView
        label="More options"
        accessibilityRole="button"
        accessibilityState={{ expanded: menuIsOpen }}
        onPress={() => setMenuIsOpen(!menuIsOpen)}
        testID="credential-menu-button"
      >
        <MaterialIcons name="more-vert" style={mixins.headerIcon} />
      </AccessibleView>
    )
  }

...
              title="Share"
              onPress={onPressShare}
              testID="credential-share-button"
            />
            <MenuItem
              icon="info-outline"
              title="View Source"
              onPress={onPressDebug}
              testID="view-source-button"
            />
            <MenuItem
              icon="delete"
              title="Delete"
...
