...
      </View>
    )
  }

  return (
    <>
      <NavHeader title="Home" testID="Home Screen" />
      {rawCredentialRecords.length === 0 ? (
        <View style={styles.container}>
          <Text style={styles.header}>Looks like your wallet is empty.</Text>
          <AddCredentialButton />
          <LearnMoreLink />
        </View>
...
