...
        value={password}
        onChangeText={setPassword}
        onSubmitEditing={_unlockWallet}
        highlightError={isError}
        tvParallaxProperties={{}} // Provide default or appropriate properties
        onTextInput={() => {}} // Provide a no-op or appropriate handler
        testID="password-input"
      />
      <ErrorDialog message={errorText} />
      <Button
        buttonStyle={styles.buttonPrimary}
        containerStyle={styles.buttonPrimaryContainer}
        titleStyle={styles.buttonPrimaryTitle}
        title="Unlock Wallet"
        onPress={_unlockWallet}
      />
      {showBiometricsButton && (
        <Button
          buttonStyle={styles.buttonClear}
          titleStyle={styles.buttonClearTitle}
...
