...
        name="SettingsNavigation"
        component={SettingsNavigation}
        options={{
          title: 'Settings',
          tabBarIcon: SettingsTabIcon,
          tabBarAccessibilityLabel: `Settings, (4 of 4)${labelSuffix}`,
          tabBarTestID: 'settings-tab'
        }}
      />
    </Tab.Navigator>
  )
}

...
