...
        <SettingsItem key="register" title="Register wallet" onPress={registerWallet} />
        <SettingsItem key="restore" title="Restore wallet" onPress={() => navigation.navigate('RestoreWalletScreen')} />
        <SettingsItem key="backup" title="Backup wallet" onPress={() => setBackupModalOpen(true)} />
        <SettingsItem key="reset" title="Reset wallet" onPress={() => setResetModalOpen(true)} />
        <SettingsItem key="help" title="Help" onPress={() => navigation.navigate('Help')} />
        <SettingsItem key="about" title="About" onPress={() => navigation.navigate('About')} />
        {FEATURE_FLAGS.passwordProtect && <SettingsItem key="signout" title="Sign out" onPress={lockWallet} />}
      </ScrollView>
      <ConfirmModal
        open={resetModalOpen}
        onRequestClose={() => setResetModalOpen(false)}
        onConfirm={resetWallet}
        confirmText="Yes"
...
